# zoshrinkC2

./: Cargo.toml  ContractTemplate.sol  README.md  Template_1_deploy_contracts.js  c2.py  contract_generator.py  server.py  server_rust.py
SmartContractDeployment/: .env  hardhat.config.js  package.json
SmartContractDeployment/scripts/: deploy.js
migrate/: Cargo.toml
migrate/src/: main.rs
templates/: template.go  template.rs
