[package]
name = "migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
base32 = "0.4.0"
base64 = "0.21.0"
cfb-mode = { version = "0.8.2", features = ["block-padding"] }
block-modes = "0.8.1"
fancy-regex = "0.11.0"
hex = "0.4.3"
hex-literal = "0.4.1"
rand = "0.8.5"
reqwest = { version = "0.11.17", features = ["blocking","json"] }
rsa = "0.9.2"
rustc-serialize = "0.3.24"
serde_json = "1.0.96"
sha2 = "0.10.6"
url = "2.3.1"
openssl = { version = "0.10.49", features = ["vendored"] }
execute = "0.2.12"
